--- a/index.html
+++ b/index.html
@@ -7,42 +7,105 @@
   <meta name="theme-color" content="#0f172a">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="apple-touch-icon" href="icons/icon-192.png">
-  <style>
-    :root{
-      --bg:#f6f7fb; --card:#fff; --ink:#0f172a; --muted:#6b7280; --line:#e5e7eb; --accent:#111827;
-      --rose:#b91c1c; --amber:#b45309; --emerald:#065f46;
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;height:100%;background:var(--bg);color:var(--ink);font:16px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;}
-    .app{max-width:1000px;margin:0 auto;min-height:100%;display:flex;flex-direction:column}
-    header{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--line);z-index:10}
-    .title{padding:12px 16px;font-weight:800;font-size:22px}
-    .tabs{display:flex;gap:8px;overflow:auto;padding:8px 8px 12px;border-top:1px solid var(--line);border-bottom:1px solid var(--line);background:#fff}
-    .tab{flex:0 0 auto;border:1px solid var(--line);border-radius:999px;padding:10px 14px;background:#fff;font-weight:700}
-    .tab.active{background:var(--accent);color:#fff;border-color:var(--accent)}
-    main{padding:16px;display:flex;flex-direction:column;gap:16px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:16px;box-shadow:0 2px 6px rgba(0,0,0,.03)}
-    .card h2{margin:0;padding:12px 16px;border-bottom:1px solid var(--line);font-size:18px}
-    .card .body{padding:12px 16px}
-    .grid{display:grid;gap:12px}
-    .three{grid-template-columns:1fr}
-    @media(min-width:640px){.three{grid-template-columns:1fr 1fr 1fr}}
-    input,select,button{font:inherit}
-    input,select{border:1px solid var(--line);border-radius:12px;padding:12px;background:#fff}
-    button.primary{background:var(--accent);color:#fff;border:none;border-radius:12px;padding:12px;font-weight:800}
-    ul.tasks{list-style:none;margin:0;padding:0;display:grid;gap:10px}
-    li.task{display:flex;gap:8px;justify-content:space-between;align-items:flex-start;background:#f8fafc;border:1px solid var(--line);border-radius:12px;padding:12px}
-    .meta{display:flex;gap:8px;flex-wrap:wrap;font-size:12px;color:var(--muted);margin-top:4px}
-    .pill{font-weight:800;text-transform:uppercase;letter-spacing:.04em}
-    .rose{color:var(--rose)} .amber{color:var(--amber)} .emerald{color:var(--emerald)}
-    .actions{display:flex;gap:8px}
-    .btn{border:1px solid var(--line);background:#fff;border-radius:10px;padding:8px 10px;font-size:14px}
-    .strike{text-decoration:line-through;color:#9ca3af}
-    footer{padding:8px 16px 24px;text-align:center;color:#6b7280;font-size:12px}
-    .bar{display:flex;gap:8px;align-items:center;justify-content:space-between;padding:8px 16px}
-    .hint{font-size:13px;color:#6b7280;margin:6px 0 0}
-    .banner{display:none;padding:10px 16px;background:#111827;color:#fff}
-  </style>
+<style>
+  /* Base palette */
+  :root{
+    --bg:#f6f7fb; --card:#fff; --ink:#0f172a; --muted:#6b7280; --line:#e5e7eb; --accent:#111827;
+    --rose:#b91c1c; --amber:#b45309; --emerald:#065f46;
+    --safe-top: env(safe-area-inset-top); --safe-bottom: env(safe-area-inset-bottom);
+  }
+
+  *{box-sizing:border-box}
+  html,body{margin:0;height:100%;background:var(--bg);color:var(--ink);
+    /* Use clamp for better scaling on small screens */
+    font: clamp(15px, 1.8vw, 16px)/1.45 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+  }
+
+  /* App shell */
+  .app{max-width:1000px;margin:0 auto;min-height:100%;display:flex;flex-direction:column;padding-bottom:var(--safe-bottom)}
+  header{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--line);z-index:10;padding-top:var(--safe-top)}
+  .title{padding:10px 12px;font-weight:800;font-size:clamp(18px,2.6vw,22px)}
+
+  /* Tabs: wrap, larger targets on phones */
+  .tabs{
+    display:flex; flex-wrap:wrap; gap:8px;
+    padding:8px 8px 12px; background:#fff; border-top:1px solid var(--line); border-bottom:1px solid var(--line);
+  }
+  .tab{
+    border:1px solid var(--line); border-radius:999px; padding:10px 14px;
+    background:#fff; font-weight:700; line-height:1;
+    /* Bigger tap area on small screens */
+    min-height:40px;
+  }
+  .tab.active{background:var(--accent);color:#fff;border-color:var(--accent)}
+
+  main{padding:12px;display:flex;flex-direction:column;gap:12px}
+
+  /* Cards: tighter on portrait */
+  .card{background:var(--card);border:1px solid var(--line);border-radius:14px;box-shadow:0 2px 6px rgba(0,0,0,.03)}
+  .card h2{margin:0;padding:10px 12px;border-bottom:1px solid var(--line);font-size:clamp(16px,2.4vw,18px)}
+  .card .body{padding:10px 12px}
+  .bar{display:flex;gap:8px;align-items:center;justify-content:space-between;padding:8px 12px}
+
+  /* Inputs/buttons: full-width on phones */
+  input,select,button{font:inherit}
+  input,select{
+    border:1px solid var(--line); border-radius:12px; padding:12px; background:#fff; width:100%;
+  }
+  button.primary{
+    background:var(--accent);color:#fff;border:none;border-radius:12px;padding:12px;font-weight:800; width:100%;
+  }
+  .btn{
+    border:1px solid var(--line); background:#fff; border-radius:10px; padding:10px 12px; font-size:clamp(14px,2.2vw,15px);
+  }
+
+  /* Grid to single column by default (mobile-first) */
+  .grid{display:grid;gap:10px}
+  .three{grid-template-columns:1fr}
+  @media (min-width:640px){
+    .three{grid-template-columns:1fr 1fr 1fr}
+  }
+
+  /* Tasks list with safe wrapping */
+  ul.tasks{list-style:none;margin:0;padding:0;display:grid;gap:10px}
+  li.task{
+    display:flex;gap:8px;justify-content:space-between;align-items:flex-start;
+    background:#f8fafc;border:1px solid var(--line);border-radius:12px;padding:12px;
+  }
+  /* The task text: wrap long words and prevent layout jump */
+  li.task p{
+    margin:0;
+    overflow-wrap:anywhere; word-break:break-word; white-space:normal; line-height:1.4;
+    font-size:clamp(14px,2.4vw,16px);
+  }
+
+  .meta{display:flex;gap:8px;flex-wrap:wrap;font-size:clamp(11px,2vw,12px);color:var(--muted);margin-top:4px}
+  .pill{font-weight:800;text-transform:uppercase;letter-spacing:.04em}
+  .rose{color:var(--rose)} .amber{color:var(--amber)} .emerald{color:var(--emerald)}
+  .actions{display:flex;gap:8px;flex-wrap:wrap}
+
+  .strike{text-decoration:line-through;color:#9ca3af}
+  .hint{font-size:clamp(12px,2vw,13px);color:#6b7280;margin:6px 0 0}
+
+  footer{padding:8px 12px 20px;text-align:center;color:#6b7280;font-size:clamp(11px,1.8vw,12px)}
+
+  /* Portrait-specific polish */
+  @media (orientation:portrait){
+    /* Add a tiny more breathing room in portrait */
+    main{padding:10px}
+    .tabs{gap:6px}
+    .tab{padding:10px 12px}
+    /* Make the reorder/move buttons wrap so text never squashes */
+    .actions{justify-content:flex-end}
+  }
+
+  /* Avoid rubber-band causing header overlap on iOS */
+  @supports (-webkit-touch-callout: none){
+    header{backdrop-filter:saturate(120%) blur(8px)}
+  }
+</style>
 </head>
 <body>
 <div class="app">
